# snowflake_mcp_server

./: .dockerignore  .gitignore  .mcp.json  .mcpbignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  docker-bake.hcl  docker-compose.yml  implementation_plan.txt  main.py  manifest.json  mise.toml  newrelic.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  snowflake_labs_mcp_config.yaml  test_checkpoint_unit.py  test_client.py  test_client_stdio.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  dev.yml.disabled  prod.yml  publish-npm.yml  tag-version.yml  test.yml
docs/: KEY_PAIR_AUTH_SETUP.md
docs/guide/: agent-setup.md
scripts/: measure_envelope.py
server/: __main__.py  app.py  config.py  constants.py  health.py  log_utils.py  schema_cache.py  serialization.py  snowflake_connection.py
server/tools/: __init__.py  auth_refresh.py  auth_utils.py  bi_tools.py  catalog_refresh.py  category_tools.py  execute_big_query_to_disk.py  execute_query_to_file.py  product_tools.py  query_executor.py  review_tools.py  save_to_csv.py  schema_inspector.py  table_inspector.py  utils.py  vendor_tools.py
tests/: __init__.py  conftest.py  manual_test_snowflake_access.py  test_app.py  test_auth_utils.py  test_catalog_fix.py  test_checkpoint_unit.py  test_checkpointing.py  test_client.py  test_client_stdio.py  test_config.py  test_constants.py  test_disk_exports.py  test_log_utils.py  test_query_executor.py  test_schema_cache.py.old  test_schema_cache_fixed.py  test_schema_inspector.py  test_serialization.py  test_snowflake_connection.py.old  test_snowflake_connection_fixed.py  test_table_inspector.py  test_tools_execute_big_query_to_disk.py  test_tools_save_to_csv.py.old  test_tools_utils.py
