[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowflake_mcp_server"
version = "0.1.6"
description = "A Snowflake read-only MCP server with external browser authentication (SSO)"
authors = [{ name = "Nicholas Cejda", email = "ncejda@g2.com" }]
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.9.2",
  "snowflake-connector-python>=3.0.0",
  "pydantic>=2.0.0",
  "httpx>=0.28.1",
  "cachetools>=5.0.0",
  "sqlparse>=0.4.0",
  "starlette>=0.47.1",
  "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "pre-commit>=3.0.0",
  "mypy>=1.0.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "pytest-httpx>=0.30.0",
  "pytest-cov>=4.1.0"
  ]

[project.scripts]
server = "server.app:main"
snowflake-mcp = "main:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "ICN", # flake8-import-conventions
  "T20", # flake8-print
]
ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
  "T201", # print found
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["snowflake_mcp_server", "server"]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=server",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--junit-xml=test-results.xml",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow tests",
]

[tool.coverage.run]
relative_files = true
